<resources>
    <string name="app_name">MyRide</string>
    <string name="action_settings">Settings</string>
    <string name="SignUp">SignUp</string>
    <string name="Login">login</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="name">Name</string>
    <string name="UserName">User Name</string>
    <string name="Password">Password</string>
    <string name="SignIn">SignIn</string>
    <string name="email">Email ID</string>
    <string name="UserName1">User Name</string>
    <string name="Password1">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="drivingLicense">Driving License</string>
    <string name="CreateAccount">Create Account</string>
    <string name="title_activity_sign_in__option">SignIn_Option</string>
    <string name="User">User</string>
    <string name="Driver">Driver</string>
    <string name="LoginAs">Login As</string>
    <string name="OR">OR</string>
    <string name="Facebook">Facebook</string>
    <string name="Google">Google+</string>
    <string name="UserNameorEmail_id">user-email</string>
    <string name="username">UserName or Email-Id</string>
    <string name="title_activity_signupoption">signupoption</string>
    <string name="SignUp_As">SignUp As</string>
    <string name="title_activity_login__driver">Login_Driver</string>
    <string name="DriverName">DriverName</string>
    <string name="title_activity_sign_up__driver">SignUp_Driver</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>


    <string name="apikey">AIzaSyDOEV2YLBC5hfsZ_trCx9NGN-owdKBfQDA</string>
</resources>
