<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/pic"
            android:id="@+id/pic"
            />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:hint="@string/Password1"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:hint="@string/ConfirmPassword"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextLicense"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:hint="@string/drivingLicense"
            android:maxLines="1"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="48dp"
            android:paddingRight="48dp">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/car_default"
                android:id="@+id/carImage"
                android:layout_alignParentLeft="true"
                />
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/license_default"
                android:id="@+id/drivingImage"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>

        <Button
            android:id="@+id/createaccount_user"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/CreateAccount" />

        <TextView
            android:layout_width="66dp"
            android:layout_height="29dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/OR" />

        <Button
            android:id="@+id/buttonGoogle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Google" />

        <Button
            android:id="@+id/buttonfacebook"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Facebook" />


    </LinearLayout>
</ScrollView>