<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <EditText
        android:id="@+id/login_userid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:layout_marginTop="64dp"
        android:inputType="textEmailAddress"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/userpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:layout_below="@+id/login_userid"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/login_user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/SignIn"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/userpass"
        android:layout_alignParentStart="true" />

</RelativeLayout>