<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login__driver"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.karan.myride1.Login_Driver"
    tools:showIn="@layout/activity_login_driver">

    <EditText
        android:id="@+id/login_userid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email" >
        <requestFocus />
    </EditText>


    <EditText
        android:id="@+id/driver_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:layout_below="@+id/login_userid"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/login_driver"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/SignIn"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/login_userid"
        android:layout_alignParentStart="true" />

</LinearLayout>
