<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.karan.myride1.SignUp_Option"
    tools:showIn="@layout/activity_signupoption"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:focusable="false">

    <TextView
        android:text="@string/SignUp_As"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_textviewloginas"
        android:elegantTextHeight="true"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/signupDriver"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/signupUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/User"

        android:layout_below="@+id/signup_textviewloginas" />

    <Button
        android:id="@+id/signupDriver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Driver"
        android:layout_below="@+id/signupUser"
        android:layout_alignParentStart="true" />
</RelativeLayout>
